<resources>
    <string name="app_name">QuarterAcre</string>

    <string name="login_name">Full Name</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>

    <string name="login_button">Login</string>
    <string name="signUp_text">Create Your Account</string>
    <string name="signUp_button">Register now</string>
    <string name="signUp_link"><u>Sign Up for QuarterAcre</u></string>
    <string name="signOut_button">Sign Out</string>

    <string name="logo">Application Logo</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="drawer_menu_logout">Log Out</string>
    <string name="drawer_menu_about_us">About Us</string>

    <string name="title_signUp">Sign Up</string>

    <string name="password_not_qualify">Minimum number of character is 6</string>
    <string name="password_not_match">Password entered are not the same</string>

    <string name="signUp_hint">All fields are required</string>
    <string name="signUp_auth_failed">Email already registered</string>

    <string name="signIn_hint">Please enter your information</string>
    <string name="signIn_auth_failed">Password or email not recognized</string>
</resources>
