<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/signUp_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_xlarge"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/signUp_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_xsmall"
            android:layout_marginBottom="@dimen/space_large"
            android:gravity="center"
            android:text="@string/signUp_text"
            android:textSize="@dimen/textView_text_size"
            android:textStyle="bold"
            android:textColor="@color/buttonTextColor"/>

        <EditText
            android:id="@+id/signUp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_large"
            android:hint="@string/login_name"
            style="@style/AppTheme.TextBox" />

        <EditText
            android:id="@+id/signUp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_large"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            style="@style/AppTheme.TextBox"/>

        <EditText
            android:id="@+id/signUp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_large"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            style="@style/AppTheme.TextBox" />

        <EditText
            android:id="@+id/signUp_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_medium"
            android:hint="@string/login_confirm_password"
            android:inputType="textPassword"
            style="@style/AppTheme.TextBox" />

        <Button
            android:id="@+id/signUp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:text="@string/signUp_button"
            android:theme="@style/AppTheme.Button" />

        <ProgressBar
            android:id="@+id/signUp_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_large"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>